--- a/src/index.css
+++ b/src/index.css
@@ -2,17 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
- body {
-    font-family: "Inter", sans-serif;
-  }
 
-/* @layer  base {
+@layer  base {
   body {
     font-family: "Inter", sans-serif;
   }
-} */
+}
 
-/* .sticky {
+.sticky {
   @apply fixed z-[9999] bg-white/80 dark:bg-dark/80 transition;
   backdrop-filter: blur(5px);
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
@@ -70,4 +67,4 @@
 .common-carousel .swiper-button-next svg,
 .common-carousel .swiper-button-prev svg {
   @apply w-auto h-auto;
-} */
+}
